# CSA-HW1

./: README.md
CSA_HW1/: Animal.cpp  Animal.h  Beast.cpp  Beast.h  Bird.cpp  Bird.h  CMakeLists.txt  Container.cpp  Container.h  Fish.cpp  Fish.h  README.md  main.cpp
CSA_HW1/Results/: output1.txt  output2.txt  output4.txt  output6.txt  output8.txt  sorted1.txt  sorted2.txt  sorted4.txt  sorted6.txt  sorted8.txt
CSA_HW1/Tests/: input1.txt  input3.txt  input4.txt  input7.txt  input8.txt
CSA_HW2/: Animal.cpp  Animal.h  Beast.cpp  Beast.h  Bird.cpp  Bird.h  CMakeLists.txt  Commander.cpp  Commander.h  Fish.cpp  Fish.h  main.cpp
CSA_HW2/Results/: output2.txt  output4.txt  output6.txt  output7.txt  output8.txt  sorted1.txt  sorted4.txt  sorted6.txt  sorted7.txt  sorted8.txt
CSA_HW2/Tests/: input4.txt  input8.txt
CSA_HW3/: main.py
CSA_HW3/Animals/: Animal.py  Beast.py  Bird.py  Fish.py
CSA_HW3/Commander/: Commander.py
CSA_HW3/Outputs/: output1.txt  output2.txt  output4.txt  output6.txt  output7.txt  output8.txt  sorted1.txt  sorted2.txt  sorted4.txt  sorted6.txt  sorted7.txt  sorted8.txt
CSA_HW3/Tests/: input1.txt  input7.txt
CSA_HW4/: README.md  main.asm
CSA_HW4/Results/: output1.txt  output6.txt  output8.txt  sorted2.txt  soutput6.txt  soutput8.txt
CSA_HW4/Tests/: input3.txt
CSA_HW5/: Book.cpp  CMakeLists.txt  Checker.cpp  README.md  main.cpp
CSA_HW5/Tests/: test2.txt  test6.txt
